<resources>
    <string name="app_name">Voice Changer</string>
    <string name="sound_effect">Sound Effect</string>
    <string name="record">Record</string>
    <string name="your_voice">your voice</string>
    <string name="mess_start_record">Tap to start recording</string>
    <string name="mess_stop_record">Recording... Tap to stop</string>
    <string name="btn_rate">Rating</string>
    <string name="btn_facebook">Like us on Facebook</string>
    <string name="btn_contact">Contact support</string>
    <string name="btn_policy">Privacy Policy</string>
    <string name="btn_terms">Terms of user</string>
    <string name="content1">Unlimited recording time</string>
    <string name="content2">Any number of recordings</string>
    <string name="content3">Exclusive effects</string>
    <string name="content4">No ads</string>
    <string name="go_premium">Go Premium</string>
    <string name="price">$30 Weekly</string>
    <string name="voice_name">Voice Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="zero_time">00:00</string>
    <string name="save_error">Save Error</string>
    <string name="effects">Effects</string>
    <string name="custom">Custom</string>
    <string name="original">Original</string>
    <string name="add_effect_error">Add effect error</string>
    <string name="delete_all">Delete All</string>
    <string name="play">Play</string>
    <string name="no_item">No recording folder</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="noti_delete_all">You are about to delete All Items</string>
    <string name="delete">Delete</string>
    <string name="record_now">Record Now</string>
    <string name="btn_share">Share</string>
    <string name="btn_add_img">Create image with sound</string>
    <string name="btn_ring_phone">Set as phone ringtone</string>
    <string name="btn_ring_noti">Set as notification ringtone</string>
    <string name="btn_rename">Rename</string>
    <string name="btn_delete">Delete</string>
    <string name="name_exits">Name already exists</string>
    <string name="name_empty">Name cannot be empty</string>
    <string name="name_unchange">Name unchanged</string>
    <string name="file_not_exist">File doesn\'t exist</string>
    <string name="request_write_setting">Please grant permissions to take action</string>
    <string name="setting_success">Set up success</string>
    <string name="txt_rate">Rate your experience</string>
    <string name="txt_rate_done">Thanks For The Rating</string>
    <string name="rate_now">Rate now</string>
    <string name="notification_send_mail">Send mail...</string>
    <string name="pause">Pause</string>
    <string name="saving">Saving...</string>
    <string name="create_error">Save errors. Please try again later</string>
    <string name="processing">Processing...</string>
    <string name="process_error">Error processing. Please try again</string>
    <string name="basic">Basic</string>
    <string name="equalizer">Equalizer</string>
    <string name="reverb">Reverb</string>
    <string name="tempo_pitch">Tempo Pitch</string>
    <string name="tempo_rate">Tempo Rate</string>
    <string name="panning">Panning</string>
    <string name="bandwidth">Bandwidth</string>
    <string name="gain">Gain</string>
    <string name="_500hz">500Hz</string>
    <string name="_1000hz">1000Hz</string>
    <string name="_2000hz">2000Hz</string>
    <string name="_3000hz">3000Hz</string>
    <string name="_4000hz">4000Hz</string>
    <string name="_5000hz">5000Hz</string>
    <string name="_6000hz">6000Hz</string>
    <string name="_7000hz">7000Hz</string>
    <string name="_8000hz">8000Hz</string>
    <string name="in_gain">In Gain</string>
    <string name="out_gain">Out Gain</string>
    <string name="delay">Delay</string>
    <string name="decay">Decay</string>
    <string name="canceled">Canceled</string>
    <string name="dialog_request_permission"><![CDATA[If you reject permission, you can not use this service\n\nPlease turn on permissions at [Setting] > [Permission]]]></string>
    <string name="dialog_request_permission_record"><![CDATA[To record your voice, allow to record audio\n\nPlease turn on permissions at [Setting] > [Permission]]]></string>
    <string name="setting">Setting</string>
    <string name="save_success">Save successfully</string>
    <string name="save_fail">Save failure</string>
    <string name="video_creation_failed">Video creation failed</string>
    <string name="btn_import">Import pre-recorded sound</string>
    <string name="btn_text_to_voice">Create voice from text</string>
    <string name="btn_recorded_file">Recorded file</string>
    <string name="txt_text_to_voice">Create voice from text</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="dialog_video_error"><![CDATA[Can\'t play this video\nThe file does not exist or is corrupted]]></string>
    <string name="text_empty">Text cannot be empty</string>
    <string name="enter_file_name_here">Enter file name here</string>
    <string name="share_with_friend">Share with Friend</string>
    <string name="share_to">Share to...</string>
    <string name="btn_video_file">Video file</string>
    <string name="rating_comment_hint">Please write your comment here …</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="submit">Submit</string>
    <string name="thank_rate">Thank for rating</string>
    <string name="rated">You have already rated it</string>
    <string name="processing_in_progress">Processing in progress, please try again later</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>