<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog">

    <Button
        android:id="@+id/btn_share"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="start|center"
        android:padding="8dp"
        android:text="@string/btn_share"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:icon="@drawable/ic_share"
        app:iconPadding="16dp"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_add_img"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="start|center"
        android:padding="8dp"
        android:text="@string/btn_add_img"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:icon="@drawable/ic_image_add"
        app:iconPadding="16dp"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_share" />

    <Button
        android:id="@+id/btn_ring_phone"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="start|center"
        android:padding="8dp"
        android:text="@string/btn_ring_phone"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:icon="@drawable/ic_ring_phone"
        app:iconPadding="16dp"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_img" />

    <Button
        android:id="@+id/btn_ring_noti"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="start|center"
        android:padding="8dp"
        android:text="@string/btn_ring_noti"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:icon="@drawable/ic_ring_noti"
        app:iconPadding="16dp"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ring_phone" />

    <Button
        android:id="@+id/btn_rename"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="start|center"
        android:padding="8dp"
        android:text="@string/btn_rename"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:icon="@drawable/ic_rename"
        app:iconPadding="16dp"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ring_noti" />

    <Button
        android:id="@+id/btn_delete_item"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:gravity="start|center"
        android:padding="8dp"
        android:text="@string/btn_delete"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:icon="@drawable/ic_delete2"
        app:iconPadding="16dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_rename" />
</androidx.constraintlayout.widget.ConstraintLayout>